iac-macro-usage/tests/fails/lambda_negative_time.stderr
error: memory needs a positive value <= 10240
 --> tests/fails/lambda_negative_time.rs:5:33
  |
5 |         lambda(name=name,mem=-10)
  |                                 ^
